# Prune

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  agent.architecture.md  agent.debug.md  agent.md  agent.security.md  pyproject.toml
.github/workflows/: ci.yml
gumroad_upload/: README.md  build_release_zip.sh
src/prune/: __init__.py  __main__.py  analyzer.py  cli.py  models.py
src/prune/experimental/: __init__.py  dead_code.py
tests/: test_analyzer.py  test_analyzer_fixture.py  test_cli.py  test_dead_code_flag.py
tests/fixtures/sample_repo/: deletion_plan.diff  deletion_plan.json  deletion_plan.md
